# gozzip

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
docs/: glossary.md  index.md
docs/actors/: relay.md  user.md
docs/architecture/: data-flow.md  feed-model.md  iroh-network.md  multi-device-sync.md  platform-architecture.md  storage.md  system-overview.md
docs/decisions/: 001-custom-protocol-over-pure-nostr.md  002-checkpoint-reconciliation.md  003-replaceable-event-merge.md  004-dm-conversation-state.md  005-storage-pact-layer.md  006-storage-pact-risk-mitigations.md  007-key-derivation-hierarchy.md  008-protocol-hardening.md  009-incentive-model.md  010-bitchat-integration.md  011-iroh-transport-integration.md  012-xx-network-evaluation.md  index.md
docs/design/: bitchat-integration.md  equilibrium-pact-formation.md  gdpr-deletion.md  genesis-bootstrap.md  gossip-privacy.md  guardian-incentives.md  incentive-model.md  interplanetary.md  iroh-security-model.md  (+15 more)
gozzip-node/: Cargo.toml
gozzip-node/config/: node.toml
gozzip-node/src/: config.rs  discovery.rs  main.rs
gozzip-node/src/net/: blobs.rs  gossip.rs  identity.rs  mod.rs  transport.rs
gozzip-types/: Cargo.toml
simulator/: Cargo.toml  README.md  deploy.sh
simulator/config/: default.toml  realistic-5k.toml
simulator/results/sweeps/: ba-m10-2k.json  ba-m50-2k-tz.txt  ba-m50-2k.txt
simulator/src/: config.rs  main.rs  nostr_bridge.rs  types.rs
simulator/src/graph/: barabasi_albert.rs  lfr.rs  mod.rs  watts_strogatz.rs
simulator/src/node/: gossip.rs  karma.rs  mod.rs  state.rs  storage.rs
simulator/src/output/: cli.rs  html.rs  json.rs  mod.rs
simulator/src/scenarios/: churn.rs  eclipse.rs  karma.rs  mod.rs  partition.rs  sybil.rs  validate.rs  viral.rs
simulator/src/sim/: clock.rs  metrics.rs  mod.rs  orchestrator.rs  router.rs
simulator/templates/: report.html
simulator/tests/: integration.rs
(+32 files in other folders)
