[workspace]
members = [
    "gozzip-types",
    "gozzip-node",
    "simulator",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
postcard = { version = "1.1", features = ["alloc"] }
thiserror = "2"
iroh = "0.97"
iroh-gossip = "0.97"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
