[package]
name = "gozzip-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
gozzip-types = { path = "../gozzip-types" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rand = "0.8"
rand_chacha = "0.3"
lru = "0.12"
sha2 = "0.10"
rand_distr = "0.4"
indicatif = "0.17"
nostr = { version = "0.44", features = ["std"], optional = true }

[features]
default = []
nostr-events = ["nostr"]

[dev-dependencies]
approx = "0.5"
